--- a/index.html
+++ b/index.html
@@ -41,5 +41,52 @@
      -->
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="advantages">
+      <div class="adv-card">
+        <div class="adv-card__head">
+          <i class="fa-solid fa-clock adv-card__icon-container"></i>
+          <h3 class="adv-card__title">Quick Delivery</h3>
+        </div>
+        <p class="adv-card__desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+          explicabo laborum distinctio sunt veniam blanditiis modi, consectetur
+          corrupti pariatur iste.
+        </p>
+      </div>
+      <div class="adv-card">
+        <div class="adv-card__head">
+          <i class="fa-solid fa-credit-card adv-card__icon-container"></i>
+          <h3 class="adv-card__title">Secure Payment</h3>
+        </div>
+        <p class="adv-card__desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+          explicabo laborum distinctio sunt veniam blanditiis modi, consectetur
+          corrupti pariatur iste.
+        </p>
+      </div>
+      <div class="adv-card">
+        <div class="adv-card__head">
+          <i class="fa-solid fa-certificate adv-card__icon-container"></i>
+          <h3 class="adv-card__title">Best Quality</h3>
+        </div>
+        <p class="adv-card__desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+          explicabo laborum distinctio sunt veniam blanditiis modi, consectetur
+          corrupti pariatur iste.
+        </p>
+      </div>
+      <div class="adv-card">
+        <div class="adv-card__head">
+          <i class="fa-solid fa-shield-halved adv-card__icon-container"></i>
+          <h3 class="adv-card__title">Return Guarantee</h3>
+        </div>
+        <p class="adv-card__desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+          explicabo laborum distinctio sunt veniam blanditiis modi, consectetur
+          corrupti pariatur iste.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
