--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    
     <section class="advantages">
       <div class="adv-card">
         <div class="adv-card__head">
@@ -89,6 +90,63 @@
       </div>
     </section>
 
-    <section class="recomended"></section>
+    <section class="footer">
+      <div class="logo__container">
+        <div class="logo">
+          <i class="fa-solid fa-book logo__icon"></i>
+          <div class="logo__title-container">
+            <p class="logo__title">
+              book <span class="logo__title--yellow">ista</span>
+            </p>
+            <p class="logo__slogan">The Online Book Store</p>
+          </div>
+        </div>
+        <p class="logo__desc">
+          Bookista is an online bookstore website who sells all <br />
+          genres of books from around the world. Find your book <br />
+          here now.
+        </p>
+      </div>
+      <div class="f-links">
+        <h6 class="f-links__title">Quick Links</h6>
+        <ul class="f-links__container">
+          <li class="f-links__links">About Us</li>
+          <li class="f-links__links">Contact Us</li>
+          <li class="f-links__links">Products</li>
+          <li class="f-links__links">Login</li>
+          <li class="f-links__links">Sign Up</li>
+        </ul>
+      </div>
+      <div class="f-links">
+        <h6 class="f-links__title">Customer Area</h6>
+        <ul class="f-links__container">
+          <li class="f-links__links">My Account</li>
+          <li class="f-links__links">Orders</li>
+          <li class="f-links__links">Tracking List</li>
+          <li class="f-links__links">Terms</li>
+          <li class="f-links__links">Privacy Policy</li>
+          <li class="f-links__links">FAQ</li>
+        </ul>
+      </div>
+      </div>
+      <div class="f-links">
+        <h6 class="f-links__title">Get in Touch With Us</h6>
+        <ul class="f-links__container">
+          <li class="f-links__links--container"><i class="fa-solid fa-location-dot"></i> <p>832 Thompson Drive, Mumbai, <br>Maharashtra 400 001, India</p></li>
+          <li class="f-links__links--container"><i class="fa-solid fa-phone"></i> <p>+91 345123556</p></li>
+          <li class="f-links__links--container"><i class="fa-solid fa-envelope"></i> <p>support@bookista.in</p></li>
+        </ul>
+      </div>
+      <div class="f-links">
+        <h6 class="f-links__title">Follow Us</h6>
+        <ul class="f-links__container--icon">
+          <li class="f-links__links--icon"><i class="fa-brands fa-facebook-f"></i></li>
+          <li class="f-links__links--icon icon-active"><i class="fa-brands fa-youtube"></i></li>
+          <li class="f-links__links--icon"><i class="fa-brands fa-twitter"></i></li>
+          <li class="f-links__links--icon"><i class="fa-brands fa-linkedin"></i></li>
+          <li class="f-links__links--icon"><i class="fa-brands fa-instagram"></i></li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
