footer section - corrected class name according to BEM methodology

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <h6 class="f-links__title">Follow Us</h6>
         <ul class="f-links__container--icon">
           <li class="f-links__links--icon"><i class="fa-brands fa-facebook-f"></i></li>
-          <li class="f-links__links--icon icon-active"><i class="fa-brands fa-youtube"></i></li>
+          <li class="f-links__links--icon f-links__links--icon-active"><i class="fa-brands fa-youtube"></i></li>
           <li class="f-links__links--icon"><i class="fa-brands fa-twitter"></i></li>
           <li class="f-links__links--icon"><i class="fa-brands fa-linkedin"></i></li>
           <li class="f-links__links--icon"><i class="fa-brands fa-instagram"></i></li>
