--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    
     <section class="advantages">
       <div class="adv-card">
         <div class="adv-card__head">
@@ -128,25 +127,46 @@
           <li class="f-links__links">FAQ</li>
         </ul>
       </div>
-      </div>
       <div class="f-links">
         <h6 class="f-links__title">Get in Touch With Us</h6>
         <ul class="f-links__container">
-          <li class="f-links__links--container"><i class="fa-solid fa-location-dot"></i> <p>832 Thompson Drive, Mumbai, <br>Maharashtra 400 001, India</p></li>
-          <li class="f-links__links--container"><i class="fa-solid fa-phone"></i> <p>+91 345123556</p></li>
-          <li class="f-links__links--container"><i class="fa-solid fa-envelope"></i> <p>support@bookista.in</p></li>
+          <li class="f-links__links--container">
+            <i class="fa-solid fa-location-dot"></i>
+            <p>832 Thompson Drive, Mumbai, <br />Maharashtra 400 001, India</p>
+          </li>
+          <li class="f-links__links--container">
+            <i class="fa-solid fa-phone"></i>
+            <p>+91 345123556</p>
+          </li>
+          <li class="f-links__links--container">
+            <i class="fa-solid fa-envelope"></i>
+            <p>support@bookista.in</p>
+          </li>
         </ul>
       </div>
       <div class="f-links">
         <h6 class="f-links__title">Follow Us</h6>
         <ul class="f-links__container--icon">
-          <li class="f-links__links--icon"><i class="fa-brands fa-facebook-f"></i></li>
-          <li class="f-links__links--icon f-links__links--icon-active"><i class="fa-brands fa-youtube"></i></li>
-          <li class="f-links__links--icon"><i class="fa-brands fa-twitter"></i></li>
-          <li class="f-links__links--icon"><i class="fa-brands fa-linkedin"></i></li>
-          <li class="f-links__links--icon"><i class="fa-brands fa-instagram"></i></li>
+          <li class="f-links__links--icon">
+            <i class="fa-brands fa-facebook-f"></i>
+          </li>
+          <li class="f-links__links--icon f-links__links--icon-active">
+            <i class="fa-brands fa-youtube"></i>
+          </li>
+          <li class="f-links__links--icon">
+            <i class="fa-brands fa-twitter"></i>
+          </li>
+          <li class="f-links__links--icon">
+            <i class="fa-brands fa-linkedin"></i>
+          </li>
+          <li class="f-links__links--icon">
+            <i class="fa-brands fa-instagram"></i>
+          </li>
         </ul>
       </div>
+    </section>
+    <section class="copyright">
+      <p class="copyright__text">BOOKISTA - &copy; 2021 All Rights Reserved</p>
     </section>
   </body>
 </html>
