--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <!-- 
+      - advantages
+     -->
     <section class="advantages">
       <div class="adv-card">
         <div class="adv-card__head">
@@ -88,7 +91,27 @@
         </p>
       </div>
     </section>
-
+    <!-- 
+      - subscribe
+     -->
+    <section class="subscribe">
+      <h3 class="subscribe__title">
+        Subscribe to our newsletter for newest books updates
+      </h3>
+      <div class="subscribe__search-bar">
+        <input
+          type="text"
+          name="subscribe"
+          id="subscribe"
+          placeholder="Enter your email-id"
+          class="subscribe__search-input"
+        />
+        <button class="subscribe__btn">SUBSCRIBE</button>
+      </div>
+    </section>
+    <!-- 
+      - footer
+     -->
     <section class="footer">
       <div class="logo__container">
         <div class="logo">
@@ -165,6 +188,10 @@
         </ul>
       </div>
     </section>
+
+    <!-- 
+      - copyright
+     -->
     <section class="copyright">
       <p class="copyright__text">BOOKISTA - &copy; 2021 All Rights Reserved</p>
     </section>
