--- a/index.html
+++ b/index.html
@@ -92,6 +92,67 @@
       </div>
     </section>
     <!-- 
+      - testimonial
+     -->
+    <section class="testimonial">
+      <div class="testimonial__left">
+        <h3 class="testimonial__title">Testimonials</h3>
+        <p class="testimonial__desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolores
+          rem repellat, perspiciatis velit accusantium.
+        </p>
+        <div class="testimonial__avatar-container">
+          <img
+            src="./assets/images/author-1.jpg"
+            alt="author"
+            class="testimonial__avatar-icon"
+          />
+          <img
+            src="./assets/images/author-2.jpg"
+            alt="author"
+            class="testimonial__avatar-icon"
+          />
+          <img
+            src="./assets/images/author-3.jpg"
+            alt="author"
+            class="testimonial__avatar-icon"
+          />
+          <img
+            src="./assets/images/author-4.jpg"
+            alt="author"
+            class="testimonial__avatar-icon"
+          />
+          <div class="testimonial__avatar-icon testimonial__avatar-icon--text">
+            21k+
+          </div>
+        </div>
+      </div>
+      <div class="testimonial__right">
+        <div class="testimonial__star-container">
+          <i class="fa-solid fa-star testimonial__star"></i>
+          <i class="fa-solid fa-star testimonial__star"></i>
+          <i class="fa-solid fa-star testimonial__star"></i>
+          <i class="fa-solid fa-star testimonial__star"></i>
+          <i class="fa-solid fa-star testimonial__star--null"></i>
+        </div>
+        <p class="testimonial__user-text">
+          "Shopping book in Bookista. is very easy. Quick delivery and fast
+          response. The services are awesome!"
+        </p>
+        <p class="testimonial__user-name">
+          Steve Henry <br />
+          <span>Book Lovers</span>
+        </p>
+        <div class="testimonial__user-icon-container">
+          <img
+            src="./assets/images/author-3.jpg"
+            alt="user"
+            class="testimonial__avatar-icon testimonial__avatar-icon--user"
+          />
+        </div>
+      </div>
+    </section>
+    <!-- 
       - subscribe
      -->
     <section class="subscribe">
