--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
           />
         </div>
       </div>
+      <!-- <div class="testimonial__shadow"></div> -->
     </section>
     <!-- 
       - subscribe
