--- a/index.html
+++ b/index.html
@@ -92,6 +92,143 @@
       </div>
     </section>
     <!-- 
+      - Latest News
+     -->
+    <section class="latest">
+      <h2 class="latest__title">Latest News</h2>
+      <p class="latest__desc">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla quisquam
+        iure expedita. Mollitia, iure ducimus!
+      </p>
+      <div class="latest__container">
+        <div class="lat-card">
+          <div class="lat-card__head">
+            <img
+              src="./assets/images/reading1.jpg"
+              alt="reading a book"
+              class="lat-card__img"
+            />
+            <h3 class="lat-card__title">
+              Why reading is important for our children?
+            </h3>
+          </div>
+          <p class="lat-card__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ullam,
+            velit natus accusamus dignissimos ipsa voluptatem vero...
+            <span class="lat-card__continue">Continue reading</span>
+          </p>
+          <div class="lat-card__footer">
+            <div class="lat-card__author-container">
+              <img
+                src="./assets/images/author-4.jpg"
+                alt=""
+                class="lat-card__author-img"
+              />
+              <div class="lat-card__name-container">
+                <h4 class="lat-card__author">Bessie Cooper</h4>
+                <p class="lat-card__published">2 days ago</p>
+              </div>
+            </div>
+            <i class="fa-sharp fa-solid fa-arrow-right lat-card__arrow"></i>
+          </div>
+        </div>
+        <div class="lat-card">
+          <div class="lat-card__head">
+            <img
+              src="./assets/images/reading2.jpg"
+              alt="reading a book"
+              class="lat-card__img"
+            />
+            <h3 class="lat-card__title">
+              Benefits of reading: Smart, Diligent, Happy
+            </h3>
+          </div>
+          <p class="lat-card__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ullam,
+            velit natus accusamus dignissimos ipsa voluptatem vero...
+            <span class="lat-card__continue">Continue reading</span>
+          </p>
+          <div class="lat-card__footer">
+            <div class="lat-card__author-container">
+              <img
+                src="./assets/images/author-5.jpg"
+                alt=""
+                class="lat-card__author-img"
+              />
+              <div class="lat-card__name-container">
+                <h4 class="lat-card__author">Leslie Alexander</h4>
+                <p class="lat-card__published">5 May 2021</p>
+              </div>
+            </div>
+            <i class="fa-sharp fa-solid fa-arrow-right lat-card__arrow"></i>
+          </div>
+        </div>
+        <div class="lat-card">
+          <div class="lat-card__head">
+            <img
+              src="./assets/images/reading4.jpg"
+              alt="reading a book"
+              class="lat-card__img"
+            />
+            <h3 class="lat-card__title">What books you should read in 2021?</h3>
+          </div>
+          <p class="lat-card__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ullam,
+            velit natus accusamus dignissimos ipsa voluptatem vero...
+            <span class="lat-card__continue">Continue reading</span>
+          </p>
+          <div class="lat-card__footer">
+            <div class="lat-card__author-container">
+              <img
+                src="./assets/images/author-6.jpg"
+                alt=""
+                class="lat-card__author-img"
+              />
+              <div class="lat-card__name-container">
+                <h4 class="lat-card__author">Darrell Steward</h4>
+                <p class="lat-card__published">3 May 2021</p>
+              </div>
+            </div>
+            <i class="fa-sharp fa-solid fa-arrow-right lat-card__arrow"></i>
+          </div>
+        </div>
+        <div class="lat-card">
+          <div class="lat-card__head">
+            <img
+              src="./assets/images/reading5.jpg"
+              alt="reading a book"
+              class="lat-card__img"
+            />
+            <h3 class="lat-card__title">
+              10 Things you must know to improve your reading skills
+            </h3>
+          </div>
+          <p class="lat-card__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ullam,
+            velit natus accusamus dignissimos ipsa voluptatem vero...
+            <span class="lat-card__continue">Continue reading</span>
+          </p>
+          <div class="lat-card__footer">
+            <div class="lat-card__author-container">
+              <img
+                src="./assets/images/author-2.jpg"
+                alt=""
+                class="lat-card__author-img"
+              />
+              <div class="lat-card__name-container">
+                <h4 class="lat-card__author">Annette Black</h4>
+                <p class="lat-card__published">1 May 2021</p>
+              </div>
+            </div>
+            <i class="fa-sharp fa-solid fa-arrow-right lat-card__arrow"></i>
+          </div>
+        </div>
+      </div>
+      <button class="latest__cta">
+        View more <i class="fa-solid fa-arrow-right-long"></i>
+      </button>
+    </section>
+    <!-- 
       - testimonial
      -->
     <section class="testimonial">
@@ -250,7 +387,6 @@
         </ul>
       </div>
     </section>
-
     <!-- 
       - copyright
      -->
