--- a/index.html
+++ b/index.html
@@ -91,6 +91,145 @@
         </p>
       </div>
     </section>
+
+    <!-- 
+      - Flash Sale
+     -->
+    <section class="flash">
+      <div class="flash__main-container">
+        <h3 class="flash__title">
+          Flash Sale <i class="fa-solid fa-bolt-lightning"></i>
+        </h3>
+        <p class="flash__desc">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt
+          voluptate assumenda nobis recusandae nemo, ullam nulla ipsa odit!
+          Omnis, sint.
+        </p>
+        <div class="flash__time">
+          <div class="flash__timer">
+            <p class="flash__timer-number">05</p>
+            <p class="flash__timer-text">Hours</p>
+          </div>
+
+          <div class="flash__timer">
+            <p class="flash__timer-number">42</p>
+            <p class="flash__timer-text">Minutes</p>
+          </div>
+
+          <div class="flash__timer">
+            <p class="flash__timer-number">19</p>
+            <p class="flash__timer-text">Second</p>
+          </div>
+        </div>
+      </div>
+      <div class="flash__slider">
+        <i class="fa-sharp fa-solid fa-arrow-left flash__right-arrow"></i>
+        <div class="fl-card">
+          <div class="fl-card__left">
+            <img
+              src="./assets/images/book1.jpg"
+              alt="The psychology of money"
+              class="fl-card__img"
+            />
+          </div>
+          <div class="fl-card__right">
+            <div class="fl-card__type-container">
+              <p class="fl-card__type">Non-Fiction</p>
+              <div class="fl-card__star-container">
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star--null"></i>
+              </div>
+              <p class="fl-card__reviews-count">(459)</p>
+            </div>
+            <h4 class="fl-card__title">The Psychology of Money</h4>
+            <p class="fl-card__author">Morgan Housal</p>
+            <div class="fl-card__price-container">
+              <p class="fl-card__current-price">&#8377;423</p>
+              <p class="fl-card__old-price">&#8377;599</p>
+            </div>
+            <div class="fl-card__cart-container">
+              <div class="fl-card__stock-bar"></div>
+              <i class="fa-solid fa-cart-shopping fl-card__cart"></i>
+            </div>
+            <p class="fl-card__book-left">2 books left</p>
+          </div>
+        </div>
+        <div class="fl-card">
+          <div class="fl-card__left">
+            <img
+              src="./assets/images/book1.jpg"
+              alt="The psychology of money"
+              class="fl-card__img"
+            />
+          </div>
+          <div class="fl-card__right">
+            <div class="fl-card__type-container">
+              <p class="fl-card__type">Non-Fiction</p>
+              <div class="fl-card__star-container">
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star--null"></i>
+              </div>
+              <p class="fl-card__reviews-count">(459)</p>
+            </div>
+            <h4 class="fl-card__title">The Psychology of Money</h4>
+            <p class="fl-card__author">Morgan Housal</p>
+            <div class="fl-card__price-container">
+              <p class="fl-card__current-price">&#8377;423</p>
+              <p class="fl-card__old-price">&#8377;599</p>
+            </div>
+            <div class="fl-card__cart-container">
+              <div class="fl-card__stock-bar"></div>
+              <i class="fa-solid fa-cart-shopping fl-card__cart"></i>
+            </div>
+            <p class="fl-card__book-left">2 books left</p>
+          </div>
+        </div>
+        <div class="fl-card">
+          <div class="fl-card__left">
+            <img
+              src="./assets/images/book1.jpg"
+              alt="The psychology of money"
+              class="fl-card__img"
+            />
+          </div>
+          <div class="fl-card__right">
+            <div class="fl-card__type-container">
+              <p class="fl-card__type">Non-Fiction</p>
+              <div class="fl-card__star-container">
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star"></i>
+                <i class="fa-solid fa-star fl-card__star--null"></i>
+              </div>
+              <p class="fl-card__reviews-count">(459)</p>
+            </div>
+            <h4 class="fl-card__title">The Psychology of Money</h4>
+            <p class="fl-card__author">Morgan Housal</p>
+            <div class="fl-card__price-container">
+              <p class="fl-card__current-price">&#8377;423</p>
+              <p class="fl-card__old-price">&#8377;599</p>
+            </div>
+            <div class="fl-card__cart-container">
+              <div class="fl-card__stock-bar"></div>
+              <i class="fa-solid fa-cart-shopping fl-card__cart"></i>
+            </div>
+            <p class="fl-card__book-left">2 books left</p>
+          </div>
+        </div>
+        <i class="fa-sharp fa-solid fa-arrow-right flash__left-arrow"></i>
+      </div>
+      <div class="flash__overlay"></div>
+      <button class="flash__cta">
+        View more <i class="fa-solid fa-arrow-right-long"></i>
+      </button>
+    </section>
     <!-- 
       - Latest News
      -->
