--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <p class="fl-card__book-left">2 books left</p>
           </div>
         </div>
-        <div class="fl-card">
+        <div class="fl-card fl-card--hide">
           <div class="fl-card__left">
             <img
               src="./assets/images/book1.jpg"
