--- a/index.html
+++ b/index.html
@@ -91,7 +91,121 @@
         </p>
       </div>
     </section>
-
+    <!-- 
+      - Special offers
+     -->
+    <section class="offers">
+      <h3 class="offers__title">Special Offers</h3>
+      <p class="offers__desc">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ut
+        voluptas! Minima inventore architecto quidem incidunt
+      </p>
+      <div class="offers__arrow">
+        <i class="fa-solid fa-arrow-left-long offers__arrow-left"></i>
+        <i class="fa-solid fa-arrow-right-long offers__arrow-right"></i>
+      </div>
+      <div class="offers__card-container">
+        <div class="off-card">
+          <div class="off-card__img-container">
+            <img
+              src="./assets/images/book3.jpg"
+              alt="offer"
+              class="off-card__img"
+            />
+          </div>
+          <div class="off-card__body">
+            <h4 class="off-card__title">Siddhartha</h4>
+            <div class="off-card__tags-container">
+              <p class="off-card__tag">biography</p>
+              <p class="off-card__tag">thriller</p>
+              <p class="off-card__tag">horror</p>
+            </div>
+            <p class="off-card__desc">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa
+              aspernatur obcaecati veniam voluptatem accusantium laudantium
+              cumque, ea rerum ipsum quis
+            </p>
+            <h5 class="off-card__author">Kevin Smiley</h5>
+            <div class="off-card__cta-container">
+              <button class="off-card__cta">
+                <i class="fa-solid fa-cart-shopping"></i> Add to Cart
+              </button>
+              <div class="off-card__price-container">
+                <p class="off-card__current-price">&#8377;400</p>
+                <p class="off-card__old-price">&#8377;499</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="off-card">
+          <div class="off-card__img-container">
+            <img
+              src="./assets/images/book7.jpg"
+              alt="offer"
+              class="off-card__img"
+            />
+          </div>
+          <div class="off-card__body">
+            <h4 class="off-card__title">Life's Amazing Secrets</h4>
+            <div class="off-card__tags-container">
+              <p class="off-card__tag">biography</p>
+              <p class="off-card__tag">thriller</p>
+              <p class="off-card__tag">horror</p>
+            </div>
+            <p class="off-card__desc">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa
+              aspernatur obcaecati veniam voluptatem accusantium laudantium
+              cumque, ea rerum ipsum quis
+            </p>
+            <h5 class="off-card__author">Gaur Gopal Das</h5>
+            <div class="off-card__cta-container">
+              <button class="off-card__cta">
+                <i class="fa-solid fa-cart-shopping"></i> Add to Cart
+              </button>
+              <div class="off-card__price-container">
+                <p class="off-card__current-price">&#8377;250</p>
+                <p class="off-card__old-price">&#8377;325</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="off-card">
+          <div class="off-card__img-container">
+            <img
+              src="./assets/images/book8.jpg"
+              alt="offer"
+              class="off-card__img"
+            />
+          </div>
+          <div class="off-card__body">
+            <h4 class="off-card__title">Thinking Fast and Slow</h4>
+            <div class="off-card__tags-container">
+              <p class="off-card__tag">biography</p>
+              <p class="off-card__tag">thriller</p>
+              <p class="off-card__tag">horror</p>
+            </div>
+            <p class="off-card__desc">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa
+              aspernatur obcaecati veniam voluptatem accusantium laudantium
+              cumque, ea rerum ipsum quis
+            </p>
+            <h5 class="off-card__author">Daniel Kahneman</h5>
+            <div class="off-card__cta-container">
+              <button class="off-card__cta">
+                <i class="fa-solid fa-cart-shopping"></i> Add to Cart
+              </button>
+              <div class="off-card__price-container">
+                <p class="off-card__current-price">&#8377;375</p>
+                <p class="off-card__old-price">&#8377;687</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="offers__view-more">
+        View more <i class="fa-solid fa-arrow-right"></i>
+      </button>
+    </section>
     <!-- 
       - Flash Sale
      -->
