--- a/index.html
+++ b/index.html
@@ -92,6 +92,52 @@
       </div>
     </section>
     <!-- 
+      - Trending
+     -->
+    <section class="trending">
+      <h3 class="trending__title">Trending this week</h3>
+      <p class="trending__desc">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nobis!
+        Molestias temporibus tempora beatae officia
+      </p>
+      <div class="trending__slider">
+        <i
+          class="fa-solid fa-arrow-left tr-slider__arrow tr-slider__arrow--left"
+        ></i>
+        <div class="tr-slider__img tr-slider__img--one">
+          <img src="./assets/images/book9.jpg" alt="book" />
+        </div>
+        <div class="tr-slider__img tr-slider__img--two">
+          <img src="./assets/images/book6.jpg" alt="book" />
+        </div>
+        <div class="tr-slider__img tr-slider__img--three">
+          <img src="./assets/images/book5.jpg" alt="book" />
+        </div>
+        <div class="tr-slider__img tr-slider__img--four">
+          <img src="./assets/images/book3.jpg" alt="book" />
+        </div>
+        <div class="tr-slider__img tr-slider__img--five">
+          <img src="./assets/images/book2.jpg" alt="book" />
+        </div>
+        <i
+          class="fa-solid fa-arrow-right tr-slider__arrow tr-slider__arrow--right"
+        ></i>
+      </div>
+      <div class="trending__author-container">
+        <div class="trending__author-img">
+          <img src="./assets/images/author-3.jpg" alt="author" />
+        </div>
+        <h5 class="trending__author">Don Norman</h5>
+        <div class="testimonial__star-container">
+          <i class="fa-solid fa-star testimonial__star"></i>
+          <i class="fa-solid fa-star testimonial__star"></i>
+          <i class="fa-solid fa-star testimonial__star"></i>
+          <i class="fa-solid fa-star testimonial__star"></i>
+          <i class="fa-solid fa-star testimonial__star"></i>
+        </div>
+      </div>
+    </section>
+    <!-- 
       - Special offers
      -->
     <section class="offers">
@@ -137,7 +183,7 @@
             </div>
           </div>
         </div>
-        <div class="off-card">
+        <div class="off-card off-card--active">
           <div class="off-card__img-container">
             <img
               src="./assets/images/book7.jpg"
@@ -274,7 +320,7 @@
         <div class="fl-card">
           <div class="fl-card__left">
             <img
-              src="./assets/images/book1.jpg"
+              src="./assets/images/book6.jpg"
               alt="The psychology of money"
               class="fl-card__img"
             />
@@ -307,8 +353,8 @@
         <div class="fl-card fl-card--hide">
           <div class="fl-card__left">
             <img
-              src="./assets/images/book1.jpg"
-              alt="The psychology of money"
+              src="./assets/images/book2.jpg"
+              alt="Ikigai"
               class="fl-card__img"
             />
           </div>
